# testdockerecho

./: .gitignore  Dockerfile  Makefile.am  configure.ac  docker-compose.yml  helloworld.cpp  readme.md  testdockerecho.cpp
dep/: testdockerecho.cfg
